fix: scrollbar height

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,6 +86,7 @@ body {
 ::-webkit-scrollbar {
   width: 8px;
   border-radius: 10px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track {
